Fixing dark mode transition time, fixing height in create gifos page

--- a/styles/_create-gifos.scss
+++ b/styles/_create-gifos.scss
@@ -7,14 +7,14 @@
         display: inherit;
     }
     .create-gifos_main {
-        height: calc(100vh - 90px - 129px - 30px);
+        //height: calc(100vh - 90px - 129px - 30px);
         display: flex;
-        margin-top: 30px;
+        margin-top: 5px;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         position: relative;
-        min-height: 550px;
+        //min-height: 550px;
     }
     .screen {
         width: 688px;
