--- a/styles/styles.css
+++ b/styles/styles.css
@@ -414,8 +414,8 @@ button {
           transform-origin: 100% 0%;
   -webkit-transform: rotateY(90deg);
           transform: rotateY(90deg);
-  -webkit-transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  -webkit-transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding-top: 30px;
@@ -489,6 +489,8 @@ button {
     display: none;
   }
   .navigation-bar__menu {
+    -webkit-transition: all 0.1s cubic-bezier(0.77, 0.2, 0.05, 1);
+    transition: all 0.1s cubic-bezier(0.77, 0.2, 0.05, 1);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1092,11 +1094,10 @@ button {
     display: inherit;
   }
   .create-gifos_main {
-    height: calc(100vh - 90px - 129px - 30px);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-top: 30px;
+    margin-top: 5px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1108,7 +1109,6 @@ button {
         -ms-flex-align: center;
             align-items: center;
     position: relative;
-    min-height: 550px;
   }
   .screen {
     width: 688px;
@@ -1338,8 +1338,8 @@ button {
 }
 
 body {
-  -webkit-transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  -webkit-transition: all 0.1s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition: all 0.1s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
 
 body.dark {
